Debug space and alignment issue while highlighting text

--- a/src/components/TextAnalysisAndStringReplacement/index.css
+++ b/src/components/TextAnalysisAndStringReplacement/index.css
@@ -49,10 +49,6 @@ p{
     font-size: 1rem;
     font-weight: 600;
     color:#060912;
-    display: flex;
-    align-items: center;
-    
-
 }
 .count-value{
     margin: 3px;
@@ -78,7 +74,6 @@ p{
 }
 span{
     background-color: #feff00;
-    margin: 0px 10px;
 }
 
 @media screen and (min-width:768px){
